<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cremy.firebucket.presentation.ui.activities.OnBoardingActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/material_design_keyline_one">

        <ImageView
            android:id="@+id/imageview_app_logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_launcher_web_no_shadow"
            android:transitionName="@string/transition_logo_onboarding_to_login_and_register"/>

        <TextView
            style="@style/OnBoardingTitle"
            android:layout_gravity="center_horizontal"
            android:text="@string/onboarding_title" />

        <Button
            android:id="@+id/button_cta_login"
            style="@style/OnBoardingCtaLogin"
            android:layout_gravity="center_horizontal"
            android:text="@string/login" />

        <TextView
            android:id="@+id/textview_cta_register"
            style="@style/OnBoardingCtaRegister"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/material_design_keyline_one"
            android:text="@string/onboarding_cta_register" />
    </LinearLayout>


</FrameLayout>