<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.cremy.firebucket.presentation.ui.activities.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textview_title"
                style="@style/LoginFormTitle"
                android:layout_above="@+id/cardview_login_form"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/margin_large_x"
                android:text="@string/login" />


            <android.support.v7.widget.CardView
                android:id="@+id/cardview_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/material_design_keyline_one"
                card_view:cardCornerRadius="@dimen/material_design_cardview_corner_radius"
                card_view:cardElevation="@dimen/material_design_cardview_elevation"
                card_view:cardUseCompatPadding="true"
                card_view:contentPadding="@dimen/material_design_keyline_one">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/material_design_keyline_one"
                    android:layout_marginTop="@dimen/material_design_keyline_three">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/text_input_layout_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputEditText
                            style="@style/LoginFormEmailEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_email_address" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/text_input_layout_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputEditText
                            style="@style/LoginFormPasswordEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_password" />
                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/cta_login"
                        style="@style/FirebucketButton"
                        android:text="@string/login_cta" />

                </LinearLayout>

            </android.support.v7.widget.CardView>


            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/textview_title"
                android:layout_centerHorizontal="true"
                android:visibility="gone"
                tools:visibility="visible" />
        </RelativeLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/imageview_app_logo"
        style="@style/LoginFormAppIcon"
        android:elevation="@dimen/material_design_cardview_elevation_state_picked"
        app:layout_anchor="@id/cardview_login_form"
        app:layout_anchorGravity="top|center_horizontal"
        android:transitionName="@string/transition_logo_onboarding_to_login_and_register"/>
</android.support.design.widget.CoordinatorLayout>